cabal-version:       >=1.10

name:                ellipticHS
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Theo Charalambous
maintainer:          t.e.charalambous@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library 
  build-depends:       base                            >= 4.8         && < 5
                       , random
  default-language:    Haskell2010
  exposed-modules:     Lib.Arithmetic
                       , Lib.EllipticCurve
                       , Lib.Lenstra
                       , Lib.Pollards


executable bench
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                       , ellipticHS
                       , random
                       , time
  ghc-options:         -threaded -O2
  hs-source-dirs:      bench
  default-language:    Haskell2010
